[package]
name = "cutr"
version = "0.1.0"
edition = "2021"
description = "Rust cut"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
rand = "0.8.5"
